# gomoku

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Gomoku  Makefile  README.md  a.out  gmon.out  libFLAC.so.12  main.cpp  outfile  output  package-lock.json  quicksort.cpp  shell.nix  test.txt  text.txt
.build/src/: Graphics.d  MainMenu.d  main.d
.build/src/AI/: AI.d
.build/src/Debug/: Debug.d
.build/src/Graphics/: Graphics.d
SFML/: a.out
assets/images/: star2.xcf
assets/images/avatars/: Game.psd
doc/: astro.config.mjs  package-lock.json  package.json
doc/.github/workflows/: deploy.yml
doc/src/contents/: introduction.md
doc/src/layouts/: Layout.astro  Sidebar.astro
doc/src/styles/: index.css  (+1 more)
include/: Graphics.hpp  MainMenu.hpp  gomoku.hpp
include/AI/: AI.hpp  ThreadPool.hpp
include/Bitboard/: Bitboard.hpp
include/Debug/: Debug.hpp
include/Game/: Gameplay.hpp
include/Graphics/: AnimatedGIF.hpp  Graphics.hpp
include/Music/: Music.hpp
lib/: flac_script.sh
src/: Graphics.cpp  MainMenu.cpp  a.out  main.cpp  test.cpp
src/AI/: AI.cpp  AIUtils.cpp  AI_utils.cpp  ThreadPool.cpp  heuristic.cpp
src/Bitboard/: Bitboard.cpp  BitboardCaptures.cpp  BitboardDoubleThree.cpp  BitboardGenerateMoves.cpp  BitboardPatterns.cpp  BitboardRules.cpp  BitboardUtils.cpp  BitboardVictory.cpp
src/Debug/: Debug.cpp
src/Game/: Gameplay.cpp  GameplayUtils.cpp
src/Graphics/: AnimatedGIF.cpp  Graphics.cpp  Utils.cpp
src/Music/: Music.cpp
stb/: stb_image.h
wandering-wind/: package-lock.json  package.json
wandering-wind/.astro/: settings.json
(+82 files in other folders)
